# qr-shopper-server

./: .gitignore  pyproject.toml  tox.ini
src/product_detail_store/: service_factory.py
src/product_detail_store/fastapi/: __init__.py  api.py  exception_handler.py
src/product_detail_store/fastapi/endpoints/: products.py
src/product_detail_store/fastapi/middlewares/: hmac_authorizer.py
src/product_detail_store/models/: product.py
src/product_detail_store/repositories/in_memory/: inmemory_product_repository.py  inmemory_user_repository.py
src/product_detail_store/services/interfaces/: product_repository.py  user_repository.py
test/test_product_detail_store/endpoints/: test_products.py
