[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "product-details-storage"
version = "0.1.0"
description = "A repository for product information"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn"
]

[project.optional-dependencies]
dev = [
    "requests",
    "pytest",
    "pytest-cov",
    "parameterized",
    "flake8",
]
test = [
    "requests",
    "pytest",
    "pytest-cov",
    "parameterized",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]